# ConsiderateFollowers-NG

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml
data/SKSE/Plugins/: ConsiderateFollowers.ini
src/DialogueManager/: DialogueManager.cpp  DialogueManager.h  StoredDialogue.cpp  StoredDialogue.h
src/RE/: Misc.h  Offset.h
src/common/: PCH.h  Plugin.h
src/export/: SKSEPlugin.cpp
src/hooks/: hooks.cpp  hooks.h
src/settings/: INISettings.cpp  INISettings.h  JSONSettings.cpp  JSONSettings.h
